...
            singleLine = true,
            keyboardOptions = KeyboardOptions(keyboardType = KeyboardType.NumberPassword),
            modifier = Modifier
                .fillMaxWidth()
                .height(48.dp)
                .alpha(0f)
                .testTag("code-input")
                .focusRequester(focus)
                .focusable(),
        )
    }
}

